--- a/src/scss/helpers/mixins.scss
+++ b/src/scss/helpers/mixins.scss
@@ -6,29 +6,40 @@
 @mixin flexboxCenter() {
   display: flex;
   justify-content: center;
-  align-items:flex-start;
-
+  align-items: center;
 }
 
 @mixin justify-content($value) {
   justify-content: $value;
 }
 
-@mixin display-inline{
-  display: inline;
-  justify-content: space-between;
-  margin: 0 20px;
-
+@mixin display-inline {
+  display:inline-flex;
+  align-content: center;
+  justify-content: center;
+  margin: 20px 20px;
+  padding: 20px;
 }
 
-@mixin hover{
+@mixin hover {
   transition: 0.4s;
   background-color: $secondaryColor;
   cursor: pointer;
 }
 
-@mixin btn($value){
+@mixin btn($value) {
   font-size: $value;
   background-color: $primaryColor;
+}
 
+@mixin buttonFill($theme) {
+  @if ($theme == "outline") {
+    background-color: wheat;
+    border-color: rgb(125, 125, 125);
+    color: rgb(125, 125, 125);
+  } @else {
+    background-color: rgba(125, 125, 125, 0.137);
+    border-color: rgb(0, 0, 0);
+    color: rgb(14, 0, 0);
+  }
 }
