--- a/src/scss/helpers/columns.scss
+++ b/src/scss/helpers/columns.scss
@@ -1,50 +1,50 @@
 .col-1 {
   width: column(1);
-  background-color: $secondaryColor;
+/*   background-color: $secondaryColor; */
 }
 .col-2 {
   width: column(2);
-  background-color: $secondaryColor;
+  /* background-color: $secondaryColor; */
 }
 .col-3 {
   width: column(3);
-  background-color: $secondaryColor;
+  /* background-color: $secondaryColor; */
 }
 .col-4 {
   width: column(4);
-  background-color: $secondaryColor;
+  /* background-color: $secondaryColor; */
 }
 .col-5 {
   width: column(5);
-  background-color: $secondaryColor;
+  /* background-color: $secondaryColor; */
 }
 .col-6 {
   width: column(6);
-  background-color: $secondaryColor;
+  /* background-color: $secondaryColor; */
 }
 .col-7 {
   width: column(7);
-  background-color: $secondaryColor;
+  /* background-color: $secondaryColor; */
 }
 .col-8 {
   width: column(8);
-  background-color: $secondaryColor;
+  /* background-color: $secondaryColor; */
 }
 .col-9 {
   width: column(9);
-  background-color: $secondaryColor;
+  /* background-color: $secondaryColor; */
 }
 .col-10 {
   width: column(10);
-  background-color: $secondaryColor;
+  /* background-color: $secondaryColor; */
 }
 .col-11 {
   width: column(11);
-  background-color: $secondaryColor;
+  /* background-color: $secondaryColor; */
 }
 .col-12 {
   width: column(12);
-  background-color: $secondaryColor;
+  /* background-color: $secondaryColor; */
 }
 @include xs {
     .col-xs-1 {
